--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,10 @@
 *.jpg
 *.jpeg
 *.gif
-drawDetections.py
-oneqr.py
-twoqr.py
-*.jpeg
-resize_cv.py
-video_nocropped.py
-video_cropped.py
-bounding_box_and_polygon.py
-QR_coordinate_points.py
-csv_test.py
-extract_name_mp4_file.py
-qr_csv.csv
-qr_csv.py
+# ignore generated html files,
+*.py
+.Rhistory
+# except foo.html which is maintained by hand
+!modular_video_cropped.py
+
+!testing_heatmap.png
